world map and pin

--- a/index.html
+++ b/index.html
@@ -5,11 +5,27 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Holiday Showcase</title>
         <link rel="stylesheet" href="styles.css" />
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+        <style>
+            @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap");
+            @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap");
+            @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap");
+
+            .material-symbols-outlined {
+                font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 24;
+            }
+        </style>
     </head>
     <body>
-        <div class="body">
-            <p>World Map</p>
-        </div>
+        <section class="start">
+            <div class="mainArea flex">
+                <div class="worldMap flex">
+                    <div class="imageArea">
+                        <img class="worldMapImage" src="images/generated_with_worldmapgenerator.png" alt="" />
+                    </div>
+                </div>
+            </div>
+        </section>
     </body>
     <script type="text/javascript" src="main.js"></script>
 </html>
