--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
                 <div class="worldMap flex">
                     <div class="imageArea">
                         <img class="worldMapImage" src="images/generated_with_worldmapgenerator.png" alt="" />
+                        <img class="pin1" src="images/red_pin.png" alt="" />
+                        <!-- <div class="pins"> -->
+                        </div>
                     </div>
                 </div>
             </div>
