--- a/index.html
+++ b/index.html
@@ -22,9 +22,19 @@
                 <div class="worldMap flex">
                     <div class="imageArea">
                         <img class="worldMapImage" src="images/generated_with_worldmapgenerator.png" alt="" />
-                        <img class="pin1" src="images/red_pin.png" alt="" />
-                        <!-- <div class="pins"> -->
-                        </div>
+                        <img class="pin1" src="images/red_pin.png" alt="" data-title="Sweden Holidays" data-description="Details about Sweden" />
+                        <img class="pin2" src="images/red_pin.png" alt="" data-title="Canada Holidays" data-description="Details about Canada" />
+                        <img class="pin3" src="images/red_pin.png" alt="" data-title="United States Holidays" data-description="Details about United States" />
+                        <img class="pin4" src="images/red_pin.png" alt="" data-title="Mexico Holidays" data-description="Details about Mexico" />
+                        <img class="pin5" src="images/red_pin.png" alt="" data-title="India Holidays" data-description="Details about India" />
+                        <img class="pin6" src="images/red_pin.png" alt="" data-title="South Africa Holidays" data-description="Details about South AFrica" />
+                        <img class="pin7" src="images/red_pin.png" alt="" />
+                        <img class="pin8" src="images/red_pin.png" alt="" />
+                        <img class="pin9" src="images/red_pin.png" alt="" />
+                        <img class="pin10" src="images/red_pin.png" alt="" />
+                        <img class="pin11" src="images/red_pin.png" alt="" />
+                        <img class="pin12" src="images/red_pin.png" alt="" />
+                        <img class="pin13" src="images/red_pin.png" alt="" />
                     </div>
                 </div>
             </div>
