adding text and image

--- a/index.html
+++ b/index.html
@@ -22,7 +22,15 @@
                 <div class="worldMap flex">
                     <div class="imageArea">
                         <img class="worldMapImage" src="images/generated_with_worldmapgenerator.png" alt="" />
-                        <img class="pin1" src="images/red_pin.png" alt="" data-title="Sweden Holidays" data-description="Details about Sweden" />
+                        <img
+                            class="pin1"
+                            src="images/red_pin.png"
+                            alt=""
+                            data-title="Sweden Holidays"
+                            data-description="Details about Sweden<br/>
+                            St. Lucia’s Day (Dec 13): Boys also join the processions, wearing cone-shaped hats decorated with stars. Families often bake saffron buns, called lussekatter, as part of the celebration.<br/><br/>Christmas (Dec 24–25): Many Swedes watch Disney’s Christmas special on TV, a tradition since the 1950s. Glögg (mulled wine) and gingerbread cookies are common festive treats."
+                            data-image="images/sweden_image.png"
+                        />
                         <img class="pin2" src="images/red_pin.png" alt="" data-title="Canada Holidays" data-description="Details about Canada" />
                         <img class="pin3" src="images/red_pin.png" alt="" data-title="United States Holidays" data-description="Details about United States" />
                         <img class="pin4" src="images/red_pin.png" alt="" data-title="Mexico Holidays" data-description="Details about Mexico" />
