--- a/index.html
+++ b/index.html
@@ -31,11 +31,49 @@
                             St. Lucia’s Day (Dec 13): Boys also join the processions, wearing cone-shaped hats decorated with stars. Families often bake saffron buns, called lussekatter, as part of the celebration.<br/><br/>Christmas (Dec 24–25): Many Swedes watch Disney’s Christmas special on TV, a tradition since the 1950s. Glögg (mulled wine) and gingerbread cookies are common festive treats."
                             data-image="images/sweden_image.png"
                         />
-                        <img class="pin2" src="images/red_pin.png" alt="" data-title="Canada Holidays" data-description="Details about Canada" />
-                        <img class="pin3" src="images/red_pin.png" alt="" data-title="United States Holidays" data-description="Details about United States" />
-                        <img class="pin4" src="images/red_pin.png" alt="" data-title="Mexico Holidays" data-description="Details about Mexico" />
-                        <img class="pin5" src="images/red_pin.png" alt="" data-title="India Holidays" data-description="Details about India" />
-                        <img class="pin6" src="images/red_pin.png" alt="" data-title="South Africa Holidays" data-description="Details about South AFrica" />
+                        <img
+                            class="pin2"
+                            src="images/red_pin.png"
+                            alt=""
+                            data-title="Canada Holidays"
+                            data-description="Details about Canada<br />Christmas (Dec 25):
+                        Winter activities like ice skating and sledding add a festive touch. Many cities host holiday parades, such as the Toronto Santa Claus Parade.<br /><br />Boxing
+                        Day (Dec 26): Named for the tradition of giving boxes of gifts to the less fortunate, it’s now a major shopping day. Many Canadians also use the
+                        day to visit extended family.<br /><br />Hanukkah (varies): Community gatherings often include singing traditional songs like 'Ma’oz Tzur.' Hanukkah gelt (chocolate coins) is given to children as treats."
+                            data-image="images/canada.png"
+                        />
+                        <img
+                            class="pin3"
+                            src="images/red_pin.png"
+                            alt=""
+                            data-title="United States Holidays"
+                            data-description="Details about United States<br/>Christmas (Dec 25): Houses glow with colorful lights, and many families place a decorated Christmas tree at home. Traditional foods include roasted turkey, ham, eggnog, and pies.<br/><br/>Hanukkah (varies): Each night, an additional candle is lit on the menorah, often accompanied by blessings. Foods fried in oil, like latkes and sufganiyot, symbolize the miracle of the oil.<br/><br/>Kwanzaa (Dec 26–Jan 1): The celebration includes lighting a kinara (candle holder) and discussing the Nguzo Saba (Seven Principles). Gifts are often handmade, emphasizing creativity and heritage.                        "
+                            data-image="images/united_states.png"
+                        />
+                        <img
+                            class="pin4"
+                            src="images/red_pin.png"
+                            alt=""
+                            data-title="Mexico Holidays"
+                            data-description="Details about Mexico<br/>Las Posadas (Dec 16–24): Communities gather nightly for reenactments, ending with festive parties at different homes. Hot drinks like ponche (fruit punch) and champurrado (chocolate drink) are staples.<br/><br/>Christmas (Dec 25): Families enjoy fireworks and exchange gifts at midnight. Popular desserts include buñuelos (fried dough) sprinkled with sugar.<br/><br/>Day of the Innocents (Dec 28): Inspired by the biblical story of King Herod, it's a day of playful tricks. Newspapers often feature satirical articles in honor of the holiday."
+                            data-image="images/mexico.png"
+                        />
+                        <img
+                            class="pin5"
+                            src="images/red_pin.png"
+                            alt=""
+                            data-title="India Holidays"
+                            data-description="Details about India<br/>Christmas (Dec 25): Goa is especially known for its grand Christmas carnivals and illuminated churches. Special sweets like kalkals and neureos are prepared.<br/><br/>Gita Jayanti (varies): Devotees often fast and recite verses from the Bhagavad Gita. The holiday also promotes discussions on self-discipline and dharma (righteousness)."
+                            data-image="images/india.png"
+                        />
+                        <img
+                            class="pin6"
+                            src="images/red_pin.png"
+                            alt=""
+                            data-title="South Africa Holidays"
+                            data-description="Details about South AFrica<br/>Christmas (Dec 25): Choir performances and carol singing are popular activities. Decorations often include local flora like fynbos and proteas.<br/><br/>Day of Goodwill (Dec 26): Many people spend the day outdoors, enjoying picnics and sports. It’s also a time for charitable acts, such as donating food and clothing."
+                            data-image="images/south_africa.png"
+                        />
                         <img class="pin7" src="images/red_pin.png" alt="" />
                         <img class="pin8" src="images/red_pin.png" alt="" />
                         <img class="pin9" src="images/red_pin.png" alt="" />
