--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                             src="images/red_pin.png"
                             alt=""
                             data-title="South Africa Holidays"
-                            data-description="Details about South AFrica<br/>Christmas (Dec 25): Choir performances and carol singing are popular activities. Decorations often include local flora like fynbos and proteas.<br/><br/>Day of Goodwill (Dec 26): Many people spend the day outdoors, enjoying picnics and sports. It’s also a time for charitable acts, such as donating food and clothing."
+                            data-description="Details about South Africa<br/>Christmas (Dec 25): Choir performances and carol singing are popular activities. Decorations often include local flora like fynbos and proteas.<br/><br/>Day of Goodwill (Dec 26): Many people spend the day outdoors, enjoying picnics and sports. It’s also a time for charitable acts, such as donating food and clothing."
                             data-image="images/south_africa.png"
                         />
                         <img class="pin7" src="images/red_pin.png" alt="" />
