--- a/index.html
+++ b/index.html
@@ -74,13 +74,62 @@
                             data-description="Details about South Africa<br/>Christmas (Dec 25): Choir performances and carol singing are popular activities. Decorations often include local flora like fynbos and proteas.<br/><br/>Day of Goodwill (Dec 26): Many people spend the day outdoors, enjoying picnics and sports. It’s also a time for charitable acts, such as donating food and clothing."
                             data-image="images/south_africa.png"
                         />
-                        <img class="pin7" src="images/red_pin.png" alt="" />
-                        <img class="pin8" src="images/red_pin.png" alt="" />
-                        <img class="pin9" src="images/red_pin.png" alt="" />
-                        <img class="pin10" src="images/red_pin.png" alt="" />
-                        <img class="pin11" src="images/red_pin.png" alt="" />
-                        <img class="pin12" src="images/red_pin.png" alt="" />
-                        <img class="pin13" src="images/red_pin.png" alt="" />
+                        <img
+                            class="pin7"
+                            src="images/red_pin.png"
+                            alt=""
+                            data-title="China Holidays"
+                            data-description="Details about China<br/> Dongzhi Festival (Dec 21–22): The festival celebrates the balance of yin and yang as the days begin to grow longer. In northern China, eating dumplings is also a common tradition."
+                            data-image="images/China.png"
+                        />
+                        <img
+                            class="pin8"
+                            src="images/red_pin.png"
+                            alt=""
+                            data-title="Japan Holidays"
+                            data-description="Details about Japan<br/> Christmas (Dec 25): Couples exchange gifts and enjoy romantic outings, akin to Valentine's Day. Illuminated displays, known as “illuminations,” decorate cities like Tokyo and Osaka.<br/><br/>Ōmisoka (Dec 31): The tradition of eating toshikoshi soba symbolizes cutting away the hardships of the past year. At midnight, Buddhist temples ring their bells 108 times to purify worldly desires."
+                            data-image="images/Japan.png"
+                        />
+                        <img
+                            class="pin9"
+                            src="images/red_pin.png"
+                            alt=""
+                            data-title="UK Holidays"
+                            data-description="Details about UK<br/> Christmas (Dec 25): 'Father Christmas' brings presents, often placed in stockings by the fireplace. Christmas crackers, containing small toys and paper crowns, are popular at dinner tables.<br/><br/>Boxing Day (Dec 26): The day originally focused on servants receiving gifts from employers. It’s now associated with football matches and sales events."
+                            data-image="images/UK.png"
+                        />
+                        <img
+                            class="pin10"
+                            src="images/red_pin.png"
+                            alt=""
+                            data-title="Australia Holidays"
+                            data-description="Details about Australia<br/> Christmas (Dec 25): Santa is often depicted in summer attire, sometimes arriving on a surfboard. Pavlova, a meringue dessert topped with fruits, is a popular treat.<br/><br/>Boxing Day (Dec 26): The Sydney to Hobart Yacht Race begins on this day, attracting global attention. Many families attend backyard cricket matches or go camping."
+                            data-image="images/Australia.png"
+                        />
+                        <img
+                            class="pin11"
+                            src="images/red_pin.png"
+                            alt=""
+                            data-title="Brazil Holidays"
+                            data-description="Details about Brazil<br/> Christmas (Dec 25): The ceia de Natal (Christmas dinner) includes roasted pork or turkey and tropical fruits. Families exchange gifts during the amigo secreto (secret friend) game.<br/><br/>New Year’s Eve (Dec 31): Revelers jump over seven waves for good luck and throw flowers into the sea as offerings to Yemanja."
+                            data-image="images/Brazil.png"
+                        />
+                        <img
+                            class="pin12"
+                            src="images/red_pin.png"
+                            alt=""
+                            data-title="Russia Holidays"
+                            data-description="Details about Russia<br/> Christmas (Jan 7): Families attend an all-night vigil before celebrating with traditional dishes like kutya, a sweet grain pudding. Christmas trees are often decorated with edible ornaments.<br/><br/>New Year’s Eve (Dec 31): Ded Moroz and his granddaughter, Snegurochka, deliver gifts. The evening includes festive feasts with Olivier salad and champagne."
+                            data-image="images/Russia.png"
+                        />
+                        <img
+                            class="pin13"
+                            src="images/red_pin.png"
+                            alt=""
+                            data-title="Ethiopia Holidays"
+                            data-description="Details about Ethiopia<br/> Genna (Jan 7): Celebrations include a game resembling hockey, played by men and boys. Doro wat (spicy chicken stew) is a traditional dish served with injera."
+                            data-image="images/Genna.png"
+                        />
                     </div>
                 </div>
             </div>
